--- a/src/main/resources/assets/simpleplanes/lang/en_us.lang
+++ b/src/main/resources/assets/simpleplanes/lang/en_us.lang
@@ -19,7 +19,7 @@ death.attack.plane_crash.name=%1$s died in a plane crash
 block.charger_block.name=FE Charging Station
 block.fueling_block.name=Plane Fueling Station
 
-item.furnace_engine.name=Furnace Engine
+item.furnace_engine.name=Coal Engine
 item.junk_engine.name=Junk Engine
 item.propeller.name=Propeller
 item.sprayer.name=Sprayer
